Dark mode fixes.

--- a/public/css/dark.css
+++ b/public/css/dark.css
@@ -3840,6 +3840,5 @@ button.toast-close-button { background-image: initial; background-color: initial
 .gutter.gutter-horizontal { background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAeCAYAAADkftS9AAAAIklEQVQoU2M4c+bMfxAGAgYYmwGrIIiDjrELjpo5aiZeMwF+yNnOs5KSvgAAAABJRU5ErkJggg=="); }
 .gutter.gutter-vertical { background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAFAQMAAABo7865AAAABlBMVEVHcEzMzMzyAv2sAAAAAXRSTlMAQObYZgAAABBJREFUeF5jOAMEEAIEEFwAn3kMwcB6I2AAAAAASUVORK5CYII="); }
 table.dataTable tbody tr.selected { background-color: rgb(32, 44, 66); }
-.customAlert { text-shadow: rgba(24, 26, 27, 0.2) 3px 2px 3px; border-color: initial; box-shadow: rgba(0, 0, 0, 0.75) 0px 0px 15px -2px; }
 .vimvixen-hint { background-color: rgb(123, 83, 0) !important; border-color: rgb(216, 176, 19) !important; color: rgb(243, 232, 200) !important; }
 ::placeholder { opacity: 0.5 !important; }
